# ValSKA-HERA-beam-FWHM

./: .gitignore  .make-python-support  .make-release-support  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  TESTING.md  gen_file_structure_file.sh  pyproject.toml  python.mk  requirements.txt  validation_results  valska_env.yaml  valska_env_base.yaml  valska_env_gpu.yaml
.github/: pull_request_template.md
.github/actions/setup-conda/: action.yml
.github/workflows/: pre-commit.yml  python-app.yml  valska-actions.yml  valska-autoformat.yml
bash_scripts/: cancel_selection_of_jobs.sh  check_bayeseor_manifests.sh  print_example_prepared_file_outputs.sh  valska-bayeseor-cleanup.sh  valska-bayeseor-compare-sweeps.sh  valska-bayeseor-help.sh  valska-bayeseor-report-all.sh  valska-bayeseor-report-sweep.sh  valska-bayeseor-resume-sweep.sh  valska-bayeseor-sweep-achromatic_Gaussian-GLEAM.sh  valska-bayeseor-sweep-achromatic_Gaussian-GLEAM_v2.sh  valska-bayeseor-sweep-achromatic_Gaussian-GLEAM_v3.sh  valska-bayeseor-sweep-achromatic_Gaussian-GSM.sh  valska-bayeseor-sweep-achromatic_Gaussian-GSM_plus_GLEAM.sh  valska-bayeseor-sweep-achromatic_Gaussian-GSM_plus_GLEAM_v3.sh  valska-bayeseor-sweep-achromatic_Gaussian-GSM_v3.sh  valska-bayeseor-sweep-airy_diam14m-GSM_plus_GLEAM.sh  valska-bayeseor-sweep-airy_diam14m-GSM_plus_GLEAM_v3.sh  valska-bayeseor-sweep-chromatic_Gaussian-GLEAM_v2.sh  valska-bayeseor-sweep-chromatic_Gaussian-GLEAM_v3.sh  valska-bayeseor-sweep-chromatic_Gaussian-GSM.sh  valska-bayeseor-sweep-chromatic_Gaussian-GSM_plus_GLEAM.sh  valska-bayeseor-sweep-chromatic_Gaussian-GSM_plus_GLEAM_v3.sh  valska-bayeseor-sweep-chromatic_Gaussian-GSM_v3.sh  valska-bayeseor-sweep-v3-common.sh  valska-list-sweeps.sh
bash_scripts/archive/pre_v3_20260425/: README.md  valska-bayeseor-sweep-achromatic_Gaussian-GLEAM_v2.sh  valska-bayeseor-sweep-achromatic_Gaussian-GSM.sh  valska-bayeseor-sweep-achromatic_Gaussian-GSM_plus_GLEAM.sh  valska-bayeseor-sweep-airy_diam14m-GSM_plus_GLEAM.sh  valska-bayeseor-sweep-chromatic_Gaussian-GLEAM_v2.sh  valska-bayeseor-sweep-chromatic_Gaussian-GSM.sh  valska-bayeseor-sweep-chromatic_Gaussian-GSM_plus_GLEAM.sh
config/: paths.yaml  runtime_paths.example.yaml  runtime_paths.yaml  runtime_paths.yaml.example
config/pyuvsim/reference_simulations/first_generation/: fov-19.4-oscar-sm.yml
docs/design/: external_tool_integration_spec.md  shared_infrastructure_roadmap.md  tool_implementers_guide.md
docs/source/: api.rst  conf.py  contributing.rst  design.rst  index.rst  readme.rst  reports.rst  testing.md  testing.rst  usage.rst  validation.rst  workflows.rst
docs/source/design/: external_tool_integration_spec.md  shared_infrastructure_roadmap.md  tool_implementers_guide.md
docs/source/reports/: README.md  uksrc_airy_diam14m_gsm_plus_gleam_sweep_airy_init.md
docs/source/reports/uksrc_airy_diam14m_gsm_plus_gleam_sweep_airy_init_assets/: complete_analysis_results.json  complete_analysis_successful.csv  sweep_report_summary.csv  sweep_report_summary.json
docs/source/workflows/: bayeseor_cli_examples.md  bayeseor_operations.md  bayeseor_reporting.md  bayeseor_validation.md  pyuvsim_cli_examples.md  validation_report_template.md  verifying_prepared_outputs.md
docs/workflows/: bayeseor_cli_examples.md  bayeseor_validation.md
notebooks/: 00_validation.ipynb  00_validation_inputs.ipynb  00_validation_template.ipynb  01_validation_GSM_Gaussian_beam.ipynb  01_validation_GSM_beam.ipynb  02_validation_GLEAM_Gaussian_beam.ipynb  02_validation_GSM_GLEAM_Gaussian_beam.ipynb  02_validation_GSM_GLEAM_beam.ipynb  03_pyuvsim_intro.ipynb  03_validation_OSKAR_GSM_GLEAM_Gaussian_beam.ipynb  03_validation_OSKAR_GSM_GLEAM_beam.ipynb  04_sky_preprocessing_forBayesEor.ipynb  04_skypreprocessing_forBayesEor.ipynb  04_validation_GSM_GLEAM_Airy_beam.ipynb  05_pyuvsim_intro.ipynb  06_skypreprocessing_forBayesEor.ipynb
scripts/: prepare_bayeseor_run.py
source/: index.rst
src/valska/: _version.py  beam_metrics.py  cli_format.py  evidence.py  notebook_helpers.py  utils.py
src/valska/external_tools/bayeseor/: __init__.py  analysis_plot.py  cli_cleanup.py  cli_compare_sweeps.py  cli_list_sweeps.py  cli_prepare.py  cli_report.py  cli_report_all.py  cli_resume.py  cli_submit.py  cli_sweep.py  cli_sweep_audit.py  cli_validate_sweep.py  report.py  setup.py  slurm.py  submit.py  sweep.py  sweep_health.py
src/valska/external_tools/pyuvsim/: __init__.py  cli_prepare.py  cli_submit.py  constants.py  runner.py  setup.py  slurm.py  submit.py
src/valska_hera_beam/: __init__.py  _compat.py  beam_metrics.py  cli_format.py  evidence.py  notebook_helpers.py  plotting.py  utils.py
src/valska_hera_beam/cli/: doctor.py  main.py
src/valska_hera_beam/config/: paths.yaml
src/valska_hera_beam/external_tools/: __init__.py
src/valska_hera_beam/external_tools/bayeseor/: __init__.py  analysis_plot.py  cli_cleanup.py  cli_compare_sweeps.py  cli_help.py  cli_list_sweeps.py  cli_prepare.py  cli_report.py  cli_report_all.py  cli_resume.py  cli_submit.py  cli_sweep.py  cli_sweep_audit.py  cli_sweep_status.py  cli_validate_sweep.py  constants.py  report.py  runner.py  setup.py  slurm.py  submit.py  sweep.py  sweep_health.py
src/valska_hera_beam/external_tools/pyuvsim/: __init__.py  cli_prepare.py  cli_submit.py  runner.py  setup.py  slurm.py  submit.py
tests/: beam_validation.py  conftest.py  constants.py  test_bayeseor_analysis_plot.py  test_bayeseor_cleanup.py  test_bayeseor_cli.py  test_bayeseor_compare_sweeps.py  test_bayeseor_help.py  test_bayeseor_list_sweeps.py  test_bayeseor_report.py  test_bayeseor_report_all.py  test_bayeseor_resume.py  test_bayeseor_slurm.py  test_bayeseor_submit.py  test_bayeseor_sweep.py  test_bayeseor_sweep_audit.py  test_bayeseor_sweep_health.py  test_beam_metrics.py  test_evidence.py  test_notebook_helpers.py  test_package_compat.py  test_plotting.py  test_pyuvsim_cli.py  test_pyuvsim_setup.py  test_pyuvsim_slurm.py  test_pyuvsim_submit.py  test_repository_name.py  test_utils.py  test_version.py
(+15 files in other folders)
