# ---
# Quick usage:
# Editable install (dev): pip install -e .[dev]
# Standard install: pip install .
# ---
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "valska-hera-beam-fwhm"
version = "0.1.0"
description = "Validation utilities for HERA beam FWHM sensitivity in 21-cm power-spectrum forward modelling."
readme = "README.md"
# requires-python = ">=3.10"
license = { file = "LICENSE" }

authors = [
  { name = "UKSRC Science Enabling - Science Validation Tooling" }
]

keywords = ["UKSRC", "validation", "Bayesian", "HERA", "21-cm", "power spectrum"]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: BSD License",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Astronomy"
]

# Dependencies are specified in valska_env.yaml not here
# dependencies = []

# Version is derived from your Git tags by setuptools-scm
# dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
  "pytest-mock>=3.15.1",
  "ruff>=0.14.11",
  "nbqa>=1.9.0",
  "mypy>=1.19.1",
  "pre-commit>=4.5.1",
  "ipykernel>=7.1.0",
  "nbstripout>=0.8.2",
  "build>=1.4.0",
  "twine>=6.2.0",
  "nbmake>=1.5.5",
  "sphinx>=9.1.0",
  "sphinx_rtd_theme>=3.1.0",
  "myst_parser>=5.0.0",
  "types-pyyaml>=6.0.12.20250915"
]
docs = [
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.7.1"
]

[project.urls]
Homepage = "https://github.com/UKSRC/ValSKA-HERA-beam-FWHM"
Issues = "https://github.com/UKSRC/ValSKA-HERA-beam-FWHM/issues"

[project.scripts]
valska-beam-validate = "valska_hera_beam.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "docs*", "notebooks*", "scripts*", "temp*"]

[tool.setuptools_scm]
write_to = "src/valska_hera_beam/_version.py"
fallback_version = "0.1.0"

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
# E/F = Flake8, I = Isort, PL = Pylint, UP = Pyupgrade
select = ["E", "F", "I", "PL", "UP"]